--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.1.0
+	mod_version = 1.1.1
 	maven_group = com.github.merchantpug
-	archives_base_name = Unwieldy-1.18
+	archives_base_name = Unwieldy-1.18.2
 
 # Dependencies
 	fabric_version=0.48.0+1.18.2
+	clothconfig_version=6.2.51
