--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
@@ -8,10 +8,11 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.2.0
+	mod_name=Unwieldy
+	mod_version = 1.3.0
 	maven_group = com.github.merchantpug
 	archives_base_name = Unwieldy-1.18.2
 
 # Dependencies
 	fabric_version=0.48.0+1.18.2
-	clothconfig_version=6.2.51
+	fabric_shield_lib_version=1.5.3-1.18
