Add maven publishing stuff and change Origins to temporary fix

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,10 @@ dependencies {
 
 	modImplementation "com.github.CrimsonDawn45:Fabric-Shield-Lib:${project.fabric_shield_lib_version}"
 
-	modImplementation "com.github.apace100:origins-fabric:${project.origins_version}"
+	// Origins
+	// modImplementation ("com.github.apace100:origins-fabric:${project.origins_version}")
+	// Temporary fix (Thank you eggohito)
+	modImplementation ("com.github.eggohito:origins-fabric:${project.origins_version}")
 }
 
 processResources {
@@ -86,19 +89,26 @@ jar {
 	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			from components.java
+			afterEvaluate {
+				artifact remapJar
+				artifact(sourcesJar.archiveFile) {
+					classifier = "sources"
+					builtBy remapSourcesJar
+				}
+			}
 		}
 	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		maven {
+			name = "merchantpug"
+			url = "https://maven.merchantpug.net/releases"
+			credentials(PasswordCredentials)
+			authentication {
+				create("basic", BasicAuthentication)
+			}
+		}
 	}
 }
