--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx4G
 # Dependencies
 	fabric_version=0.70.0+1.19.2
 	fabric_shield_lib_version=v1.6.1-1.19
-	origins_version=v1.7.1
+	origins_version=00c0a88
