--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
+	minecraft_version=1.19.3
+	yarn_mappings=1.19.3+build.5
 	loader_version=0.14.12
 
 # Mod Properties
 	mod_name=Unwieldy
-	mod_version = 1.4.0+1.19.2
+	mod_version = 1.4.1+1.19.2
 	maven_group = net.merchantpug
 	archives_base_name = Unwieldy
 
 # Dependencies
-	fabric_version=0.70.0+1.19.2
-	fabric_shield_lib_version=v1.6.1-1.19
-	origins_version=00c0a88
+	fabric_version=0.70.0+1.19.3
+	fabric_shield_lib_version=1.6.3-1.19
+	# origins_version=00c0a88
